<resources>
    <string name="app_name">HA Essentials</string>
    <string name="essentials">Essentials</string>
    <string name="ha">HA</string>
    <string name="powered_by">"Powered by IFB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_mobile_number">Please enter your Mobile number</string>
    <string name="hello_there">Hello There!</string>
    <string name="btn_continue">Continue</string>
    <string name="otp_enter">Please enter otp sent to your mobile number</string>
    <string name="valid_mobile">Please enter a valid mobile number</string>
    <string name="knowing_you_better">We would like to know you better</string>
    <string name="your_firstname">Please enter your First Name</string>
    <string name="your_lastname">Please enter your Last Name</string>
    <string name="a_to_z">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="house_no">Building/House number street</string>
    <string name="locality">"Gali/locality/area  "</string>
    <string name="landmark">Landmark (optional)</string>
    <string name="pincode">Pin code</string>
    <string name="valid_firstname">Enter a valid First Name</string>
    <string name="valid_lastname">Enter a valid Last Name</string>
    <string name="valid_building">Please provide some numbers to Building name</string>
    <string name="valid_locality">Enter a valid locality or area</string>
    <string name="valid_pincode">Enter a valid Pin Code</string>
    <string name="serviceable_text">We are not serviceable at this Pin Code</string>
    <string name="serviceable_text_login">We are currently serviceable at these pin codes only</string>
    <string name="hello_user">Hello, <b>%s</b></string>
    <string name="search">Search here…</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="resend_otp_in">Resend otp in : %s</string>
    <string name="home">home</string>
    <string name="account">account</string>
    <string name="cart">cart</string>
    <string name="order">orders</string>
    <string name="items_in_cart">Items in your cart</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_Cart">add to cart</string>
    <string name="quantity">Quantity : </string>
    <string name="buy_now">Buy Now</string>
    <string name="maxitemcount">Note: maximum item count for 1 item is 5.</string>
    <string name="enter_item_count">Enter item count:</string>
    <string name="item_desc">Items Description</string>
    <string name="item_name">Item Name</string>
    <string name="price">price : &#8377;%s </string>
    <string name="price_mrp">&#8377;%s</string>
    <string name="price_disc">(%s\%% off)</string>
    <string name="remove">Remove item</string>
    <string name="not_items">Your cart is empty</string>
    <string name="order_id">Order ID : %s</string>
    <string name="total">total price : %s</string>
    <string name="nor_items">No Orders found</string>
    <string name="order_date">Ordered on : %s</string>
    <string name="order_status">Order Status : %s</string>
    <string name="cancelled">Order cancelled by user</string>
    <string name="thank_you">Thank You!</string>
    <string name="order_confirmed">Your order is placed, you can check it on orders page</string>
    <string name="confirmation">Confirmation</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="remove_items">Do you really want to cancel this order?</string>
    <string name="contact">Contact Us:-</string>
    <string name="address">Address:-</string>
    <string name="office_address">RS ENTERPRISES, IFB authorised service centre,\nD-470, near Ramphal Chowk Dwarka sector-7\nNew Delhi - 110077</string>
    <string name="email">rsservices0802@gmail.com</string>
    <string name="mobile">8057105575</string>
    <string name="mobilet">8178480082</string>
    <string name="privacy">All products are under IFB. Only be sold by\nauthorized partners, and not to be sold outside.</string>
    <string name="logout">Logout</string>
    <string name="name">%s\n%s\n%s</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="delhi_note">Please note our service is only limited to some selected areas of Delhi currently.</string>
</resources>