<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/green_65EAAE"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/userface"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:id="@+id/uaf_name_mob"/>
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:id="@+id/uaf_address"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/contact"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:id="@+id/uaf_contact"
                android:text="@string/office_address"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:drawablePadding="5dp"
                android:textSize="16sp"
                android:id="@+id/uaf_email_connect"
                app:drawableStartCompat="@drawable/emailsend" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/mobile"
                android:drawablePadding="5dp"
                android:textSize="16sp"
                android:id="@+id/uaf_mob_connect"
                app:drawableStartCompat="@drawable/contact" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/mobilet"
                    android:paddingStart="10dp"
                    android:drawablePadding="5dp"
                    android:textSize="16sp"
                    android:id="@+id/uaf_mobile_connect" />
            </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/red_DF1B38"
            android:text="@string/privacy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/red_DF1B38"
                android:padding="20dp"
                android:textSize="16sp"
                android:id="@+id/logout"
                android:text="@string/logout"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

</RelativeLayout>
</layout>