<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/oil_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/oil_oid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/order_id"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/oil_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/order_date"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/oil_order_list"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:overScrollMode="never"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/oil_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="14sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:padding="5dp"
                    android:id="@+id/oil_price"
                    android:text="@string/total"
                    android:layout_marginTop="10sp"
                    android:textColor="@color/darker_grey_3E3D3D"
                    android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/oil_cancel"
                style="@style/buttonthemeRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cancel" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"
            android:layout_below="@+id/oil_layout"
            />

    </RelativeLayout>
</layout>