<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@android:color/transparent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:gravity="center"
    android:id="@+id/confirmed_layout"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/dialog_rounded_corner"
    android:orientation="vertical">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/thank_you"
    android:textAlignment="center"
    android:id="@+id/cd_title"
    android:textSize="30sp"
    android:fontFamily="@font/poppins_bold"
    android:textColor="@color/white"
    />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/custom_dialog"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_subtitle"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        android:text="@string/order_confirmed"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/cd_ok"
        style="@style/buttontheme"/>
</LinearLayout>
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="20dp"
android:padding="20dp"
android:gravity="center"
    android:id="@+id/confirm_layout"
android:layout_gravity="center"
android:background="@drawable/dialog_rounded_corner_red"
android:orientation="vertical">


<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginTop="20dp"
    android:src="@drawable/custom_dialog_cross"
    android:adjustViewBounds="true"
    android:scaleType="fitXY"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/n_dialog_subtitle"
    android:layout_marginTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:textColor="@color/white"
    android:textSize="16sp"
    android:fontFamily="@font/poppins"
    tools:text="@string/order_confirmed"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
<Button
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:text="@string/no"
    android:layout_margin="5dp"
    android:id="@+id/cd_no"
    style="@style/buttontheme"/>
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/yes"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:id="@+id/cd_yes"
        style="@style/buttonthemeRed"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
</layout>