<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:background="@color/white"
    android:orientation="horizontal">
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/lbn_home">
<View
    android:layout_height="5sp"
    android:layout_width="42dp"
    android:id="@+id/view_home"/>
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/hae_home"
        android:layout_gravity="center"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:textSize="11sp"
        android:layout_height="wrap_content"
        android:text="@string/home"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/lbn_orders">
        <View
            android:layout_height="5sp"
            android:layout_width="42dp"
            android:id="@+id/view_order"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/hae_order"
            android:layout_gravity="center"/>
        <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:textSize="11sp"
        android:layout_height="wrap_content"
        android:text="@string/order"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/lbn_cart">
        <View
            android:layout_height="5sp"
            android:layout_width="42dp"
            android:id="@+id/view_cart"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/hae_cart"
            android:layout_gravity="center"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:textSize="11sp"
            android:layout_height="wrap_content"
            android:text="@string/cart"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/lbn_user">
        <View
            android:layout_height="5sp"
            android:layout_width="42dp"
            android:id="@+id/view_user"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/hae_user"
            android:layout_gravity="center"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:textSize="11sp"
            android:layout_height="wrap_content"
            android:text="@string/account"/>
    </LinearLayout>
</LinearLayout>
</layout>